# ta_compiladores

Laboratorio9/: CMakeCache.txt  CMakeLists.txt  Laboratorio9  Makefile  TypeChecker.cpp  TypeChecker.h  a.out  ast.cpp  ast.h  cmake_install.cmake  main.cpp  parser.cpp  parser.h  run_all_inputs.py  scanner.cpp  semantic_types.h  token.cpp  token.h  visitor.cpp  visitor.h
Laboratorio9/inputs/: input1.txt  input2.txt  input2_tokens.txt  input3.txt  input3_correct.txt  input3_correct_tokens.txt  input3_tokens.txt  input4.txt  input4_tokens.txt  input5.txt  input5_tokens.txt  inputIf.txt  inputIf_tokens.txt  inputNeg.txt  inputNeg_tokens.txt  inputNot.txt  inputNot_tokens.txt
Laboratorio9/outputs/: output1.txt  tokens_1.txt
